# remedy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.json  render.yaml  vercel.json
apps/api/: README.md  deps.py  main.py
apps/api/models/: db.py  finding.py  pr.py  repo.py  scan.py
apps/api/routes/: findings.py  health.py  prs.py  repos.py  scans.py  webhook.py  webhooks.py
apps/api/schemas/: __init__.py  finding.py  pr.py  repo.py  scan.py
apps/api/services/: finding_service.py  pr_service.py  repo_service.py  scan_service.py  webhook_service.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: RepoSelector.tsx
apps/web/src/pages/: PRs.tsx  Scans.tsx
apps/worker/: README.md  tasks.py  worker.py
apps/worker/agent/: orchestrator.py
apps/worker/agent/prompts/: plan_patch.j2  prioritize.j2
apps/worker/tools/: git_tool.py  github_app.py  grype_runner.py  osv_runner.py  patch_apply.py  semgrep_runner.py  syft_runner.py
cli/: remedy.py
infra/: README.md  alembic.ini  compose.yaml
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/migrations/: env.py
infra/migrations/versions/: 0001_init.py
scanners/: README.md
scanners/semgrep/: profiles.yml
scanners/semgrep/rules/: authz.yml  input_validation.yml  secrets.yml
scripts/: run_osv.sh  run_semgrep.sh  run_syft_grype.sh
tests/: conftest.py  test_api.py  test_integration_smoke.py  test_worker.py
(+1 files in other folders)
